[Admin] Search result: Should fix some UI bugs: - Having more spaces between Students List and More button - Teacher List was overflowed frame

--- a/app/assets/stylesheets/teacher.css.scss
+++ b/app/assets/stylesheets/teacher.css.scss
@@ -83,7 +83,7 @@ $color-font: #E17C25;
 
   .student-container, .teacher-container{
     padding-top: 7px;
-    padding-bottom: 7px;
+    padding-bottom: 40px;
     padding-left: 10px;
     border-bottom: 1px solid #ddd;
    
